add celery and celery beat
